# dbos-demo-apps

./: .gitignore  README.md
badcode/: .eslintrc  .gitignore  README.md  attempt_eslint_config_js  dbos-config.yaml  eslint.config.js  knexfile.ts  package-lock.json  package.json  start_postgres_docker.sh  tsconfig.json
bank/: README.md  package-lock.json  package.json
e-commerce/: README.md  npm-install.sh  start_postgres_docker.sh  start_prov_postgres_docker.sh
empyrical_evidences/: README.md  dbos-config.yaml  package-lock.json  package.json
greeting-emails/: .eslintrc  README.md  dbos-config.yaml  package-lock.json  package.json
greeting-guestbook/: README.md  dbos-config.yaml  package-lock.json  package.json
hello-database-extended/: README.md
hello-extended/: .gitignore  README.md  dbos-config.yaml  knexfile.ts  package-lock.json  package.json
hello-prisma/: .env  README.md  dbos-config.yaml  (+3 more)
interops/: .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  test_interops.py
interops/apps/interop-go/: go.mod  go.sum  main.go
interops/apps/interop-java/: build.gradle.kts  settings.gradle.kts
interops/apps/interop-java/src/main/java/com/example/interop/: App.java
interops/apps/interop-java/src/main/resources/: simplelogger.properties
interops/apps/interop-python/: main.py  requirements.txt
interops/apps/interop-typescript/: main.ts  package.json  tsconfig.json
python/agent/: CLAUDE.md  README.md  pyproject.toml
python/agent/hacker_news_agent/: agent.py  api.py  cli.py  llm.py  workflows.py
python/chatbot/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt
python/chatbot/chatbot/: main.py  schema.py
python/chatbot/html/: app.html
python/chatbot/migrations/: env.py
python/chatbot/migrations/versions/: 2024_07_31_180642_init.py  2024_10_09_154735_langchain_tables.py
python/databricks-agent/: .gitignore  agent.py  deploy_agent.py  pyproject.toml  query_agent.py
python/dbos-django-starter/: README.md  manage.py  pyproject.toml
python/dbos-django-starter/djangodbos/: asgi.py  settings.py  urls.py  wsgi.py
python/dbos-django-starter/polls/: apps.py  models.py  urls.py  views.py
python/dbos-django-starter/polls/migrations/: 0001_initial.py
python/document-detective/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt  setup_llamaindex.py
python/document-detective/document_detective/: index.py  main.py
python/document-detective/html/: app.html
python/document-detective/migrations/: env.py  setup_llamaindex.py
python/document-detective/migrations/versions/: 2024_07_31_180642_init.py
python/earthquake-tracker/: README.md  alembic.ini  dbos-config.yaml  main.py  pyproject.toml  requirements.txt  schema.py  start_postgres_docker.py  streamlit.py
python/earthquake-tracker/earthquake_tracker/: main.py  schema.py  streamlit.py
python/earthquake-tracker/migrations/: env.py
python/earthquake-tracker/migrations/versions/: 2024_08_21_113622_earthquake_tracker.py  2024_08_21_161330_earthquake_tracker.py
python/earthquake-tracker/tests/: conftest.py  test_earthquake_tracker.py
python/greeting-guestbook/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt
python/greeting-guestbook/greeting_guestbook/: main.py  schema.py
python/greeting-guestbook/migrations/: env.py
python/greeting-guestbook/migrations/versions/: 2024_08_29_123237_greeting_guestbook.py  2024_08_29_135547_greeting_guestbook.py
python/hacker-news-agent/: README.md  dbos-config.yaml  launch_app.sh  pyproject.toml
python/hacker-news-agent/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
python/hacker-news-agent/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
python/hacker-news-agent/frontend/src/components/: AgentList.tsx  NewAgentForm.tsx
python/hacker-news-agent/hacker_news_agent/: agent.py  api.py  cli.py  llm.py  main.py  models.py  workflows.py
python/hackernews-alerts/: README.md  dbos-config.yaml  main.py  pyproject.toml  requirements.txt  start_postgres_docker.py
python/llamabot/: .gitignore  README.md  dbos-config.yaml  main.py  migrate.py  pyproject.toml  requirements.txt
python/llamabot/llamabot/: main.py
python/llamabot/migrations/: migrate.py
python/pydantic-research-agent/: README.md  dbos-config.yaml  launch_app.sh  main.py  pyproject.toml
python/pydantic-research-agent/frontend/: index.html  package-lock.json  package.json
python/pydantic-research-agent/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
python/pydantic-research-agent/frontend/src/components/: AgentList.tsx  NewAgentForm.tsx
python/reliable-refunds/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt
python/reliable-refunds-langchain/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt
python/reliable-refunds-langchain/html/: app.html  confirm.html  email.html
python/reliable-refunds-langchain/migrations/: env.py  reset_database.py
python/reliable-refunds-langchain/migrations/versions/: 2024_07_31_180642_init.py  2025_01_28_161323_langchain_setup.py
python/reliable-refunds-langchain/reliable_refunds/: main.py  schema.py
python/reliable-refunds/html/: app.html  email.html
python/reliable-refunds/migrations/: env.py  reset_database.py  setup_llamaindex.py
python/reliable-refunds/migrations/versions/: 2024_07_31_180642_init.py
python/reliable-refunds/reliable_refunds/: main.py  schema.py
python/scheduled-reminders/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt
python/scheduled-reminders/html/: app.html
python/scheduled-reminders/scheduled_reminders/: main.py
python/widget-store/: README.md  dbos-config.yaml  pyproject.toml  requirements.txt
python/widget-store/html/: app.html  crash.liquid  order_status.liquid
python/widget-store/migrations/: env.py  reset_database.py
python/widget-store/migrations/versions/: 2024_08_22_143041_widget_store.py  2024_08_22_161257_widget_store.py  2024_08_30_124656_progress_remaining.py
python/widget-store/widget_store/: frontend.py  main.py  schema.py
(+1306 files in other folders)
