[project]
name = "hacker-news-agent"
version = "0.1.0"
description = "DBOS Agentic Hacker News Research Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbos>=0.9.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[project.scripts]
hn-agent = "hacker_news_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
