[project]
name = "dbos-django-starter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "maxdml", email = "maxdml@dbos.dev"},
]
dependencies = ["dbos>=0.24.1", "django>=5.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
