[project]
name = "document-detective"
version = "0.1.0"

dependencies = [
    "dbos==0.24.0",
    "llama-index>=0.11.18",
    "llama-index-vector-stores-postgres>=0.2.6",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true
