[project]
name = "earthquake-tracker"
version = "0.1.0"
description = "Record and display earthquakes in real time"
dependencies = [
    "dbos>=0.3.0a7",
    "streamlit>=1.37.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]
