[project]
name = "earthquake-tracker"
version = "0.1.0"
description = "Record and display earthquakes in real time"
dependencies = [
    "dbos>=0.13.0a0",
    "streamlit>=1.37.1",
    "plotly>=5.24.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true
