[project]
name = "earthquake-tracker"
version = "0.1.0"
description = "Record and display earthquakes in real time"
dependencies = [
    "dbos>=0.20.0a2",
    "streamlit>=1.41.1",
    "plotly>=6.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true

[tool.pytest.ini_options]
addopts = "-s"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(name)s:%(filename)s:%(lineno)s) %(message)s"
log_cli_level = "INFO"
log_cli = true

[dependency-groups]
dev = ["black>=24.8.0", "isort>=5.13.2", "pytest>=8.3.4"]
