[project]
name = "greeting-guestbook"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Peter Kraft", email = "petereliaskraft@gmail.com"},
]
dependencies = [
    "dbos>=0.6.0a0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240712",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true

[tool.mypy]
strict = true