[project]
name = "hacker-news-agent"
version = "0.1.0"
description = "DBOS Agentic Hacker News Research Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbos>=1.13.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
