[project]
name = "hackernews-alerts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Peter Kraft", email = "petereliaskraft@gmail.com"},
]
dependencies = [
    "dbos==0.24.0",
    "slack-sdk>=3.31.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]
[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true
