[project]
name = "dbos-llamabot"
version = "0.1.0"
description = "A RAG Slatbot built with LlamaIndex and DBOS"
authors = [
    {name = "DBOS, Inc.", email = "contact@dbos.dev"},
]
dependencies = [
    "llama-index>=0.10.67.post1",
    "slack-bolt>=1.20.0",
    "fastapi>=0.112.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
