[project]
name = "dbos-llamabot"
version = "0.1.0"
description = "A RAG Slatbot built with LlamaIndex and DBOS"
authors = [
    {name = "DBOS, Inc.", email = "contact@dbos.dev"},
]
dependencies = [
    "llama-index>=0.10.67.post1",
    "slack-bolt>=1.20.0",
    "fastapi[standard]>=0.112.1",
    "llama-index-vector-stores-postgres>=0.1.14",
    "dbos>=0.5.0a5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.11.1",
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true

[tool.mypy]
strict = true
