[project]
name = "dbos-llamabot"
version = "0.1.0"
description = "A RAG Slackbot built with LlamaIndex and DBOS"
authors = [
    {name = "DBOS, Inc.", email = "contact@dbos.dev"},
]
dependencies = [
    "fastapi[standard]>=0.112.1",
    "llama-index>=0.12.43",
    "slack-bolt>=1.23.0",
    "llama-index-vector-stores-postgres>=0.5.3",
    "dbos>=1.5.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.11.1",
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
atomic = true

[tool.mypy]
strict = true
