[project]
name = "reliable-refunds"
version = "0.1.0"
dependencies = [
    "sendgrid>=6.11.0",
    "langgraph>=1.1.10",
    "langchain-openai>=1.2.1",
    "psycopg-pool>=3.2.4",
    "langgraph-checkpoint-postgres>=3.0.5",
    "dbos==2.21.0",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true
