[project]
name = "reliable-refunds"
version = "0.1.0"

dependencies = [
    "dbos>=0.13.0a0",
    "swarm @ git+https://github.com/openai/swarm.git",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true
